syntax = "proto3";

package auth;

option go_package = "github.com/Edbeer/auth-grpc/proto;authpb";

import "google/protobuf/timestamp.proto";

service AuthService {
    rpc CreateAccount(Account) returns (Account) {};
    rpc GetAccount(GetAccountRequest) returns (stream Account) {};
    rpc UpdateAccount(Account) returns (Account) {};
    rpc DeleteAccount(Account) returns (DeleteResponse) {};
    // for payment
    rpc GetAccountByID(stream Account) returns (stream Account) {};
    rpc DepositAccount(Account) returns (Account) {};
}

message GetAccountByIDRequest{}

message GetAccountRequest {}

message DeleteResponse {}

message Account {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string card_number = 4;
    string card_expiry_month = 5;
    string card_expiry_year = 6;
    string card_security_code = 7;
    uint64 balance = 8;
    uint64 blocked_money = 9;
    repeated Statement statement = 10;
    google.protobuf.Timestamp created_at = 11;
}

message Statement {
    string payment_id = 1;
    string status = 2;
}
